fix(logo): gap

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1469,5 +1469,5 @@ img {
 
 .footer__logo span,
 .navbar__logo span {
-  margin-left: -4px;
+  margin-left: -3px;
 }
